Adjust english title to fit TUM guidelines

--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -96,7 +96,7 @@
 \def\doctype{Bachelor's Thesis\xspace}
 
 \def\studyProgram{Informatics}
-\def\title{Implementing a mobile app for object detection}
+\def\title{Implementing a Mobile App for Object Detection}
 
 \def\titleGer{Entwicklung einer mobilen App zur Objekterkennung}
 \def\author{David Drews}
@@ -678,6 +678,10 @@ Apple object detection to files loaded from storage
 Change the apps infrastructure so that models (don't forget the labels though) can be loaded from a server (suitable as they tend to be rather small). This would make it easier to add new models on the fly.
 
 Use real tracking to track objects across consecutive input images 
+
+
+
+
 % -------------------------------------------------------------------------------
 % ----------------------------------- APPENDIX --------------------------------
 % -------------------------------------------------------------------------------
