--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -608,7 +608,7 @@ Just as \code{ClassificationActivity} is the core activity that handles the imag
 
 Since TUM-Lens can run on a multitude of devices with varying combinations of camera and display resolution, the \code{DetectionActivity} sets parameters such as font sizes and matrices to convert the image data back and forth between the different formats the data is needed in. This is important as in contemporary Android devices, the resolution of the camera is usually above the resolution of the display. This is also the case for the Xiaomi Mi 9 on which we tested the application during its development (see \autoref{chap:specs} for its technical specifications). Sticking to the example of Xiaomi Mi 9, the images captured by the camera have 20 (selfie camera) or 45 (main camera) megapixels and are scaled down to 2.5 megapixel to be displayed on the device screen. After that, they are again scaled down to a bitmap of 300x300 pixels\footnote{The image received by the detector might indeed be even smaller than 300x300 pixels as the camera input is usually not square and the aspect ratio is kept throughout the image conversion pipeline. Therefore, the 300 pixels denote the larger dimension (width or height) of the input bitmap.} as this is the appropriate input size for the implemented detection framework described in \autoref{sec:mobilessd}. Once the detector returns bounding boxes for the objects detected in its input image the coordinates of these rectangles in turn are scaled back up to mark the corresponding areas in the higher resolution image shown on the device display.
 
-\subsection{Detection and Tracking}
+\subsection{Detection and Tracking} \label{ssec:detectionAndTracking}
 
 The \code{DetectionActivity} also orchestrates the two most fundamental tasks of the object detection process: object detection and, since the images are derived from a continuos camera stream, object tracking. It instantiates the object \code{detector} of the class \code{TFLiteObjectDetectionAPIModel} to handle the interactions with the TensorFlow Lite \gls{api} and a \code{MultiBoxTracker} object \code{tracker} that tries to assign each rectangle drawn on the screen to its related recognition result across successive input images. This is important because the bounding boxes that are drawn as an overlay on the camera view use different colours for different objects. If no tracking would happen, the colour that is assigned to an object will change randomly with every new image the detector processes. This would be very confusing for the user. Therefore, the recognition results returned by the detector are not directly rendered on the screen but first processed by the \code{tracker}. \\
 
@@ -642,6 +642,15 @@ Kotlin made the code definitely more concise
 
 As touched upon in \autoref{chap:motivation}, there are at least two major drivers that will fuel future development efforts. Protecting the sphere of privacy will definitively be a major motivation to build apps running machine learning frameworks locally. We've already introduced this idea by alleging the example of DeepType in \autoref{sec:privacy}. The second driver for an increase in on-device machine learning applications has been introduced in \autoref{sec:offline_usability}. It is the need for machine learners that can act independently of an internet connection. This is important as it is simply impossibly to guarantee such a connection in some circumstances. We will expand this line of thought by adding the requirement for increased speed that some problems have. We will use the following paragraphs to introduce a wide range of potential applications centred around the idea of on-device machine learning partitioned by their major drivers.
 
+\subsection{Autonomy and Speed Inspired Use Cases}
+
+We will not go into too much detail in this section as this work emphasizes the importance of low latency performance for object detection on Android devices in multiple occasions already. Still, we want to highlight the case of on-device machine learning application requiring both autonomy and speed that will change our life in the most profound way.
+
+\paragraph{Autonomous Navigation}
+Many applications in the field of autonomous navigation will greatly benefit from both aspects of autonomy and speed. Driving (or rather being chauffeured by) an autonomous vehicle is the showpiece of on-device machine learning. Firstly, it needs the fast reaction time provided by algorithms running on embedded hardware to minimise the distance and thereby time the data needs to travel when it's capture by the cars myriad of sensors. This facilitates the car's decision engine to make decisions in real-time. Given the high speed at which cars can travel and the unpredictability of other traffic participants, it is of utmost importance to react to changes in the environment in real-time. Secondly, a connection to some remote instance that analyses data online might not be given in all situations. Cars must pass tunnels, rural areas might have poor network coverage or the network itself might have an outage due to unforeseen events such as climate catastrophes, terrorist attacks or cyber attacks. In any of these cases, the car must not lose control but be able to continue to navigate smoothly and safely. The core of its data processing and machine learning pipeline must therefore function decoupled form all external networks.
+
+Having said this, autonomous cars are not the only use case for navigation relying on on-device machine learning. We can also conceive other areas such as deep see exploration, drone navigation and even space travelling where either offline usage, minimal latency or both is required for successful autonomous navigation.
+
 \subsection{Privacy Inspired Use Cases}
 
 \subsubsection{Protecting Biometric Data}
@@ -651,34 +660,28 @@ Some company like Apple and Snap\footnote{Snap Inc. is the developer of Snapchat
 Since smartphones are just a subcategory of mobile devices, different hardware opens the door for new types of applications. Health care is one industry that can greatly benefit from on-device machine learning as health data is among the data categories that are most worthy of protection. Today, there's already an astonishing variety of devices that capture health data - each of which also comes in a "smart" version that not only collects this data but also sends it to decentralised servers for storage and processing: smart watches, scales, portable \gls{ecg} and \gls{eeg} devices, blood pressure monitors, glucometers, thermometers and many more. Future developments might combine more and more of such tools into personal health companion devices that can capture and track every aspect of our health condition. Combining these various inputs to a coherent assessment of one's health status is an ideal use case for the application of machine learning. Since the data is sensitive and can easily tell a story people might want to keep private, it is a reasonable assumption that there will be a market for health companions that perform their analysis offline without sharing any data with a third party.
 
 \subsubsection{Further Dimensions}
-Listing all application domains of on-device machine learning would exceed the scope of this work. It can be observed, however, that there's not only the dimension of machine learning task along which different applications can be found (image classification, object detection, natural language processing, ...) but also other dimensions such as hardware on which the machine learning algorithm is deployed (smartphones, gadgets, robots, ...) or industries benefiting from customers being less scared about privacy breaches (entertainment, media, public sector, ...). \\
+Listing all application domains of on-device machine learning would exceed the scope of this work. It can be observed, however, that there's not only the dimension of machine learning task along which different applications can be found (image classification, object detection, natural language processing, ...) but also other dimensions such as hardware on which the machine learning algorithm is deployed (smartphones, gadgets, robots, ...) or industries benefiting from customers being less scared about privacy breaches (entertainment, media, public sector, ...).
 
 %Organisation von Fotos auf dem Smartphone, ohne dass diese an die Server von Apple, \& Google Co geschickt werden müssen (Gruppieren von Fotos, die zu einem Urlaub gehören, Gesichtserkennung, Objekterkennung)
 
-\subsection{Autonomy and Speed Inspired Use Cases}
-
-\subsubsection{Autonomous Navigation}
-Many applications in the field of autonomous navigation will greatly benefit from both aspects of autonomy and speed. Driving an autonomous vehicle is the showpiece of on-device machine learning. Firstly, it needs the fast reaction time provided by algorithms running on embedded hardware to minimise the distance data has to travel when it's capture by the cars myriad of sensors. The car's decision engine is thereby enabled to make decisions in real-time. Given the high speed at which cars can travel and the unpredictability of other traffic participants, it is of utmost importance to react to changes in the environment in real-time. Secondly, a connection to some other instance that analyses data online might not be given in all situations. Cars must pass tunnels, rural areas might have poor network coverage or the network itself might have an outage due to unforeseen events such as climate catastrophes, terrorist attacks or cyber attacks. In any of these cases, the car must not lose control but be able to continue to navigate smoothly and safely. The core of its data processing and machine learning pipeline must therefore function decoupled form all external networks. Having said this, autonomous cars are not the only use case for navigation relying on on-device machine learning. We can also conceive other areas such as deep see exploration, drone navigation and even space travelling where either offline usage, minimal latency or both is required for successful autonomous navigation.
-
-\subsubsection{Big Data}
-
-
-
-
-Autonome Autos werden unahängig von einer Verbindung zum Internet (5G, shared medium, bleibt das Auto im Tunnel dann stehen?)
-
 \section{Future Work}
 
-Replace depracted functionalities
+To finish this work, we want to suggest a variety of topics that have not been covered by this thesis or its predecessor and might be of interest to students at TUM. By doing so, we hope to other student inspire fellow students to continue the development of TUM-Lens. In the eyes of the author, this app is a fertile ground for students striving for both challenging and interesting tasks ranging from state of the art mobile development up to training custom neural networks for mobile devices.
 
-Add more models to chose from for object detection
+\subsubsection{Replace Deprecated Code And Fix Bugs}
+A first improvement can be the replacement of deprecated code. We have already achieved great progress in modernising the app by migrating it to Kotlin but there is still a significant number of outdated code that can be modernised by the next student working on the TUM-Lens project. Unfortunately, the app is also not entirely bug free. One bug we have found in version 1.0 that we weren't able to fix is the changeability of models once an image has been loaded from storage. This does currently not trigger a re-classification with the newly selected network and should be fixes in a future release.
 
-Apple object detection to files loaded from storage
+\subsubsection{Enable Input Freezing And Analysis of Images Loaded From Storage}
+These tasks primarily aim at aligning object detection features with those available for image classification. Going forward, a double tap while being in object detection mode shall thus freeze the detection process and keep the frozen results on screen. Furthermore, the user shall be able to select an image from the device storage and the app shall display the detected objects from that specific input.
 
-Change the apps infrastructure so that models (don't forget the labels though) can be loaded from a server (suitable as they tend to be rather small). This would make it easier to add new models on the fly.
+\subsubsection{Load New Models From Remote Servers And Increase Number of Available Models}
+This might sound counter-intuitive to the goal of this thesis but downloading models and the corresponding label file from an online resource would further improve the usability of the app. Currently, a new app version needs to be published in order to include a new network within the app. This is the case because as of now all models must be added to the resource folder of the application before it is built. Lastly, the user should have the option to choose from multiple object detection framework available within TUM-Lens just as in the image classification case.
 
-Use real tracking to track objects across consecutive input images 
+\subsubsection{Expand The Set of Features of TUM-Lens}
 
+The final tip is the expansion of the features of the app. With image classification and object detection we already cover to major disciplines in computer vision. In a next project, instance segmentation could be implemented to further increase the capabilities of TUM-Lens. While this would add a new feature, improvements to existing function are also possible. Another project might therefore be the implementation of better tracking than the mechanism currently implemented and described in \autoref{ssec:detectionAndTracking}. \\
+
+With every new contribution, the number of new directions in which one can take the TUM-Lens project is only growing.
 
 
 
